--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-html, body {
-    background-color:  #218dbc ;
-    color: #FFFFFF;
-    height: 100vh;
-    font-family: 'Roboto', sans-serif;
+html,
+body {
+  color: #ffffff;
+  height: 100vh;
+  font-family: "Roboto", sans-serif;
+}
+
+body h1 {
+  padding: 10px 20px;
+  font-weight: 300;
 }
 .remove-weather-form {
-    padding: 20px;
-    background-color: cadetblue;
+  padding: 20px;
+  background-color: cadetblue;
 }
 /* Fix button styling */
 /* input[type="submit"] {
@@ -20,94 +25,101 @@ html, body {
     -webkit-box-sizing: content-box;
 } */
 .weather-form {
-    margin-top:5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 500px;
+  position: relative;
+  left: 50%;
+  margin-left: -250px;
+  margin-top: 10rem;
+}
+
+.card,
+.list-group-item {
+  background-color: rgba(200, 200, 200, 0.5);
+  color: white;
 }
 
 .weather-form input {
-    text-align: center;
-    padding: 20px 75px;
-    border-radius: 30px;
-    font-size: 1.3rem;
+  height: 43px;
 }
-.weather-form button {
-    margin-top: 20px;
-    padding: 5px;
+
+.rows {
+  display: flex;
 }
-/* .weather-info {
-    display: none;
-} */
+
+.weather-info {
+  display: none;
+  padding: 0 100px;
+  margin-top: 50px;
+}
 .top-info {
-    margin: 5% 40%;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
+  margin: 5% 40%;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 .top-info i {
-    font-size: 4.5rem;
+  font-size: 4.5rem;
 }
 .city-and-description > * {
-    margin: 5px;
-    margin-left: 50px;
-    /* padding-right: 30px; */
-    display: block;
+  margin: 5px;
+  margin-left: 50px;
+  /* padding-right: 30px; */
+  display: block;
+}
+.city, .country {
+  font-weight: bolder;
+  font-size: 1.2rem;
 }
 .bottom-info {
-    background-color:#64adcd;
-    border: 2px solid #267293
-    ;
-    border-radius: 15px;
-    margin: 5% 17.5%;
-    padding-left: 30px;
-    padding-right: 30px;
+  background-color: #64adcd;
+  border: 2px solid #267293;
+  border-radius: 15px;
+  margin: 5% 17.5%;
+  padding-left: 30px;
+  padding-right: 30px;
 }
-.bottom-info .top-half{
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-evenly;
-    /* margin: 0 15%; */
-    padding: 5%;
-    border-bottom: 2px solid white;
+.bottom-info .top-half {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+  /* margin: 0 15%; */
+  padding: 5%;
+  border-bottom: 2px solid white;
 }
 .bottom-info .top-half .top-half-item {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 .top-half-item > * {
-    margin: 7.5px;
+  margin: 7.5px;
 }
 .text-bigger {
-    /* padding-top: 15%; */
-    font-size: 3rem;
+  /* padding-top: 15%; */
+  font-size: 3rem;
 }
 
-
-
 @media only screen and (max-width: 600px) {
-    body {
-        width: 100vw;
-    }
-    .weather-form {
-        padding: 25%;
-        
-        font-size: 1rem;
-    }
-    .top-half {
-        flex-direction: column;
-    }
-    .days-container {
-        flex-direction: column;
-        /* flex-wrap: wrap; */
-        
-    }
-    .day-item {
-        margin-bottom: 15%;
-    }
+  body {
+    width: 100vw;
   }
+  .weather-form {
+    padding: 25%;
 
-
-
+    font-size: 1rem;
+  }
+  .top-half {
+    flex-direction: column;
+  }
+  .days-container {
+    flex-direction: column;
+    /* flex-wrap: wrap; */
+  }
+  .day-item {
+    margin-bottom: 15%;
+  }
+}
